package edu.austral.ingsis.clifford;

// directory or file
public interface FileSystemElement {
  String getName();

  boolean isDirectory();
}
